--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -8,8 +11,6 @@ android {
 
     defaultConfig {
         applicationId "com.pecorma.plants"
-        minSdk 23
-        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -25,37 +26,47 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-    }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
+
+    kotlinOptions.jvmTarget = rootProject.ext.jvmTarget
 }
 
 dependencies {
+    implementation("androidx.core:core-ktx:${versions.corektx}")
+    implementation("androidx.appcompat:appcompat:${versions.appcompat}")
+    implementation("com.google.android.material:material:${versions.material}")
+    implementation("androidx.constraintlayout:constraintlayout:${versions.constraintlayout}")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle}")
+    implementation("androidx.navigation:navigation-fragment-ktx:${versions.navigation}")
+    implementation("androidx.navigation:navigation-ui-ktx:${versions.navigation}")
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation("androidx.compose.foundation:foundation:${versions.compose}")
+    implementation("androidx.compose.foundation:foundation-layout:${versions.compose}")
+    implementation("androidx.compose.material:material:${versions.compose}")
+    implementation("androidx.compose.material:material-icons-extended:${versions.compose}")
+    implementation("androidx.compose.runtime:runtime:${versions.compose}")
+    implementation("androidx.compose.runtime:runtime-livedata:${versions.compose}")
+    implementation("androidx.compose.ui:ui-tooling:${versions.compose}")
+    implementation("androidx.compose.ui:ui-tooling-preview:${versions.compose}")
+    implementation("androidx.compose.ui:ui-test:${versions.compose}")
+    implementation("androidx.compose.ui:ui-test-junit4:${versions.compose}")
+    implementation("androidx.compose.ui:ui-test-manifest:${versions.compose}")
+    implementation("androidx.compose.ui:ui-util:${{versions.compose}}")
+    implementation("androidx.compose.ui:ui-viewbinding:${versions.compose}")
+    implementation("androidx.compose.material3:material3:${versions.material3}")
+    implementation("androidx.window:window:${versions.window}")
+    implementation("androidx.navigation:navigation-compose:${versions.navigation}")
+    implementation("com.google.accompanist:accompanist-systemuicontroller:${versions.accompanist}")
+
+    implementation("androidx.hilt:hilt-navigation-compose:${versions.hiltNavigation}")
+    implementation("com.google.dagger:hilt-android:${versions.hilt}")
+    kapt("com.google.dagger:hilt-compiler:${versions.hilt}")
+
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:${versions.okhttp}"))
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
+    implementation("com.squareup.retrofit2:retrofit:${versions.retrofit}")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:${versions.serialization}")
+    implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:${versions.serializationConverter}")
+    implementation("io.coil-kt:coil-compose:${versions.coil}")
 }
