--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,13 @@ ext {
             coil                   : '2.0.0-rc03',
             compose                : '1.2.0-alpha08',
             constraintlayout       : '2.1.3',
-            corektx                : '1.9.0-alpha02',
+            corektx                : '1.9.0-alpha03',
             corenlp                : '4.4.0',
             hilt                   : '2.41',
             hiltNavigation         : '1.0.0',
             ktlint                 : '0.43.1',
             lifecycle              : '2.4.1',
-            material3              : '1.0.0-alpha09',
+            material3              : '1.0.0-alpha10',
             navigation             : '2.4.2',
             okhttp                 : '4.9.3',
             retrofit               : '2.9.0',
@@ -88,10 +88,10 @@ subprojects {
         kotlinOptions {
             allWarningsAsErrors = project.hasProperty("warningsAsErrors") ? project.warningsAsErrors : false
             jvmTarget = "1.8"
-            freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
-            freeCompilerArgs += '-Xopt-in=kotlinx.serialization.ExperimentalSerializationApi'
-            freeCompilerArgs += '-Xopt-in=kotlinx.coroutines.FlowPreview'
-            freeCompilerArgs += '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi'
+            freeCompilerArgs += '-opt-in=kotlin.RequiresOptIn'
+            freeCompilerArgs += '-opt-in=kotlinx.serialization.ExperimentalSerializationApi'
+            freeCompilerArgs += '-opt-in=kotlinx.coroutines.FlowPreview'
+            freeCompilerArgs += '-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi'
         }
     }
 
