--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -59,7 +60,8 @@ dependencies {
     implementation("com.google.accompanist:accompanist-pager:${versions.accompanist}")
     implementation("com.google.accompanist:accompanist-pager-indicators:${versions.accompanist}")
     implementation("com.google.maps.android:maps-compose:${versions.map}")
-    implementation("com.google.android.gms:play-services-maps:${versions.googlePlay}")
+    implementation("com.google.android.gms:play-services-maps:${versions.googlePlayMap}")
+    implementation("com.google.android.gms:play-services-location:${versions.googlePlayLocation}")
 
     implementation("androidx.hilt:hilt-navigation-compose:${versions.hiltNavigation}")
     implementation("com.google.dagger:hilt-android:${versions.hilt}")
@@ -72,4 +74,5 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:${versions.serialization}")
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:${versions.serializationConverter}")
     implementation("io.coil-kt:coil-compose:${versions.coil}")
+    implementation("com.google.accompanist:accompanist-permissions:${versions.accompanistPermissions}")
 }
