--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ ext {
             navigation             : '2.4.2',
             okhttp                 : '4.9.3',
             retrofit               : '2.9.0',
+            room                   : '2.4.2',
             serialization          : '1.3.2',
             serializationConverter : '0.8.0',
             window                 : '1.0.0'
